Updated few things

--- a/cart.html
+++ b/cart.html
@@ -98,8 +98,8 @@
             <a href="cart.html" style="--i:6;" class="active">
                 <i class='bx bx-cart'></i> Cart (<span id="cart-count">0</span>)
             </a>
-            <a href="login.html" style="--i:7;"></a>
-                <i class='bx bx-user'></i> Login
+            <a href="login.html" style="--i:7;">Login</a>
+                <i class='bx bx-user'></i>
             </a>
         </nav>
 
