--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="#" class="logo">ChapterOne</a>
         
         <nav class="navbar">
-            <a href="index.html" style="--i:1;">Home</a>
+            <a href="index.html" style="--i:1;" class="active">Home</a>
             <a href="Shop.html" style="--i:2;">Shop</a>
             <a href="top3.html" style="--i:3;">Featured</a>
             <a href="about.html" style="--i:4;">About</a>
