--- a/gateway.html
+++ b/gateway.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Razorpay Payment Integration</title>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <link rel="stylesheet" href="gateway.css">
 </head>
 <body>
     <h1>Checkout Page</h1>
