Fixed login/signup page

--- a/login.html
+++ b/login.html
@@ -104,7 +104,7 @@
       
                         <div class="login__box">
                            <input type="text" id="surnames" required placeholder=" " class="login__input">
-                           <label for="surnames" class="login__label">Surnames</label>
+                           <label for="surnames" class="login__label">Surname</label>
       
                            <i class="ri-id-card-fill login__icon"></i>
                         </div>
